--- a/presets/spec-hepsoft.yaml
+++ b/presets/spec-hepsoft.yaml
@@ -2,7 +2,7 @@
 hf-sci-soft:
     '=sci-physics/geant-4.10.6_p2':
         env: [debugsyms.conf, installsources.conf]
-        use: [data, zlib, dawn, doc, examples, gdml, opengl, qt5, vrml]
+        use: [data, zlib, dawn, doc, examples, gdml, opengl, qt5, vrml, c++14, -c++11, python]
         accept_keywords: [~amd64]
         deps:
             # required by dev-qt/qtgui-5.13.2::gentoo[xcb]
@@ -24,6 +24,7 @@ hf-sci-soft:
             "sci-physics/geant-data": { accept_keywords: [~amd64] }
             "app-doc/geant-docs": { accept_keywords: [~amd64] }
             ">=sci-physics/clhep-2.4.1.3" : { accept_keywords: [~amd64] }
+            '>=dev-python/QtPy-1.9.0-r2' : { use: [svg] }
     <sci-physics/root-9999:
         env: [debugsyms.conf, installsources.conf]
         deps:
@@ -66,11 +67,12 @@ hf-dev-tools:
     dev-util/valgrind: {}
     dev-util/cmake: {}
     sys-devel/gdb: {}
-    sys-devel/clang: { env: [no-tmpfs.conf] }
+    #sys-devel/clang: { env: [no-tmpfs.conf] }
     dev-lang/swig:0: {}
     net-libs/cppzmq: {}
-    sys-devel/llvm: { env: [no-tmpfs.conf] }
+    #sys-devel/llvm: { env: [no-tmpfs.conf] }
     dev-qt/qtcore: { env: [no-tmpfs.conf] }
+    dev-util/gcovr: { accept_keywords: [~amd64] }
 
 hf-aux-dev:
     dev-libs/capnproto:
